--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,11 @@
 
 {% block center_container %}
 
-<a class="resource" id="home_idea" href="{{SITE_ROOT}}{{idea.get_absolute_url}}" style="background: #ffffff url(/media/{{idea.get_home_page_image.image|default:'static/images/detail_no_image.gif'}}) center no-repeat;"></a>
+<img class="resource" id="home_idea"
+    src="{{ idea.get_home_page_image.image|default:'/static/images/phoenix_map.jpg' }}"
+    alt="Credit to Eric Fischer. He's on flickr."
+    width="622" height="318">
+
 <div id="home_idea_label">
   <a href="{{SITE_ROOT}}{{idea.get_absolute_url}}">{{idea.title}}</a> by {{idea.author}}
 </div>
